# grille-rouillee

./: Cargo.toml  start-nuclear-plant.sh  start-transfo-lyon-tht-bt.sh  start-transfo-nuc-1-ht-tht.sh
equilibrium/: new-assignment.json  rebalence.md  topic.json
power_grid/: readme.md
src/: city-simple.rs  create-topics.rs  equilibrium.rs  kafka-metadata-example.rs  logger_utils.rs  nuclear-plant-json.rs  nuclear-plant.rs  transfo-simple.rs
src/domain/: mod.rs  power_event.rs  power_request.rs
src/utils/: mod.rs  prom_utils.rs  sr_utils.rs
stack/: clean-all.sh  clean.sh  kafka-node-A.yml  kafka-node-B.yml  kafka-stack-all.yml  kafka-stack-total.yml  kafka-stack.yml  perpetual-rolling.sh  start-all.sh  start-once.sh
stack/redash/: env  init.sh
